--- a/source/styles/theme.css
+++ b/source/styles/theme.css
@@ -128,6 +128,27 @@ h1,h2,h3,h4,h5,h6 {
     flex: 1;
 }
 
+.pagination {
+    text-align: center;
+    margin-bottom: 1em;
+}
+.pagination .current::before {
+    content: '<';
+}
+.pagination .current::after {
+    content: '>';
+}
+.pagination .current {
+    color: #28c93e;
+}
+.pagination > a,
+.pagination > span {
+    margin-right: 1em;
+}
+.pagination > :last-child {
+    margin-right: 0;
+}
+
 /*文章*/
 .post-container {
 }
