feat: google analytics & copyright

--- a/source/styles/theme.css
+++ b/source/styles/theme.css
@@ -301,8 +301,11 @@ h1,h2,h3,h4,h5,h6 {
     content: '> ';
 }
 /*footer*/
-.footer {
+.footer .footer-links{
     padding: 1em 0;
     display: flex;
     justify-content: center;
+}
+.footer .footer-copyright{
+    text-align: center;
 }
