--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -8,6 +8,17 @@
     <%- css('styles/theme.css') %>
     <%- favicon_tag(config.favicon || theme.favicon) %>
     <title><%- page&&page.title||'首页' %> - <%- config.title %></title>
+    <% if (theme.google_analytics) { %>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=<%-theme.google_analytics.tracking_id%>"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', '<%-theme.google_analytics.tracking_id%>');
+    </script>
+    <% } %>
 </head>
 <body>
     <div class="header-title">
@@ -28,9 +39,17 @@
             <%- body %>
         </div>
         <div class="footer">
+            <% if (theme.footers && Object.keys(theme.footers).length) {%>
+            <p class="footer-links">
             <% for ( foot in theme.footers ) { %>
-                <a href="<%- theme.footers[foot] %>"><%- foot%></a>
+                <a target="_blank" href="<%- theme.footers[foot] %>"><%- foot%></a>
             <% } %>
+            </p>
+            <% } %>
+            <p class="footer-copyright">
+                <span>Powered by <a target="_blank" href="https://hexo.io">Hexo</a></span>
+                <span>Theme <a target="_blank" href="https://github.com/maiyatang2021/hexo-theme-terminal">Terminal</a></span>
+            </p>
         </div>
     </div>
 </body>
